# bestie

./: README.md  pyproject.toml  requirements.txt
prompts/: develop_chatbot.txt
src/bestie/: chatbot.py  gpt.py
