[project]
name = "bestie"
version = "0.1.0"
description = "A chatbot with the GPT API"
authors = [
    { name = "Han-Seong Kwon", email = "hansung080@hanmail.net" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai (>=1.99.9,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "colorama (>=0.4.6,<0.5.0)"
]

[tool.poetry]
packages = [
    { include = "bestie", from = "src" },
]

[tool.poetry.scripts]
chatbot = "src.bestie.chatbot:run_cli"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
